@@ -7,3 +7,5 @@ David Moore <david@startbox.com>
 John Stanley <stanley@peak.org>
 Tim Evers <t.evers@gom.com>
 Frederic Devernay
+Markus Niebel
+Thorondor
